#####################################################################################################################
#
# Project Sources
#
#####################################################################################################################

set(LKSANBOX_SRC
        sandbox.cpp)


#####################################################################################################################
#
# Compile Options per Platform
#
#####################################################################################################################

set(CMAKE_CXX_STANDARD 11)


#####################################################################################################################
#
# CMake Targets
#
#####################################################################################################################

add_executable(lk_sandbox ${LK_SRC} ${LKSANBOX_SRC})
set_target_properties(lk_sandbox
        PROPERTIES
        DEBUG_POSTFIX "d"
        )
if (MSVC)
    set_target_properties(lk_sandbox
            PROPERTIES
            LINK_FLAGS /SUBSYSTEM:WINDOWS)
endif ()

target_include_directories(lk_sandbox PUBLIC ../include)


#####################################################################################################################
#
# Link Libraries and Options
#
#####################################################################################################################

if (UNIX)
    target_link_libraries(lk_sandbox -ldl)
endif ()

target_link_libraries(lk_sandbox lk ${wxWidgets_LIBRARIES})
